--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -21,7 +21,7 @@
     "expo-camera": "^16.1.6",
     "expo-file-system": "^18.1.10",
     "expo-image-picker": "^16.1.4",
-    "expo-linear-gradient": "~12.3.0",
+    "expo-linear-gradient": "^14.1.4",
     "expo-media-library": "^17.1.6",
     "expo-splash-screen": "^0.30.8",
     "expo-status-bar": "~2.2.3",
@@ -40,7 +40,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "typescript": "^5.8.3"
   },
   "private": true
 }
