--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "PlantIdentifier",
-    "slug": "plantidentifier",
-    "version": "1.0.0",
+    "name": "Plant Identifier",
+    "slug": "plant-identifier",
+    "version": "1.2.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -28,7 +28,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "9e127baa-b302-4325-9e34-1ffd62ba1460"
+        "projectId": "4f74e27d-ef34-4237-80dc-8d5f30312986"
       }
     },
     "owner": "sideid"
