--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Plant Identifier",
     "slug": "plant-identifier",
-    "version": "1.2.4",
+    "version": "1.2.6",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -21,7 +21,10 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.sideid.PlantIdentifier"
+      "package": "com.sideid.PlantIdentifier",
+      "runtimeVersion": {
+        "policy": "appVersion"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -31,6 +34,9 @@
         "projectId": "4f74e27d-ef34-4237-80dc-8d5f30312986"
       }
     },
-    "owner": "sideid"
+    "owner": "sideid",
+    "updates": {
+      "url": "https://u.expo.dev/4f74e27d-ef34-4237-80dc-8d5f30312986"
+    }
   }
 }
